embold files add

--- a/embold.com/company-team.html
+++ b/embold.com/company-team.html
@@ -82,118 +82,66 @@
     <div class="row">
       <div class="col-8">
         <h1 class="header-sub-title">
-          We need to change<br />
-          how we write code. Period
+          Team
         </h1>
       </div>
     </div>
-    <div class="header-image bg-company-about"></div>
+    <div class="header-image bg-company-team"></div>
   </div>
-  <section class="container block block-section-sub company-about-status">
-    <div class="row">
-      <div class="body-content">
-        <div class="col-3">
-          <div class="block-column">
-            <div class="icon ic-people">
-            </div>
-            <div class="title">
-              50+ Embolder
-            </div>
-            <div class="description">
-              Great Colleagues into One Team
-            </div>
-          </div>
-        </div>
-        <div class="col-3">
-          <div class="block-column">
-            <div class="icon ic-office">
-            </div>
-            <div class="title">
-              3 Offices
-            </div>
-            <div class="description">
-              Let’s put Coffee into your brains
-            </div>
-          </div>
-        </div>
-        <div class="col-3">
-          <div class="block-column">
-            <div class="icon ic-flag">
-            </div>
-            <div class="title">
-              7 Nationalities
-            </div>
-            <div class="description">
-              Let’s put Coffee into your brains
-            </div>
-          </div>
-        </div>
-        <div class="col-3">
-          <div class="block-column">
-            <div class="icon ic-gender">
-            </div>
-            <div class="title">
-              46% Women
-            </div>
-            <div class="description">
-              Let’s put Coffee into your brains
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-  <section class="container block block-section-sub block-section-left">
-    <div class="row">
-      <div class="col-6">
-        <!-- <h4>Language Support</h4> -->
-        <h2 class="section-title">We are a software company building products for the future</h2>
-        <p class="description">embold is trusted by 1,000+ developers and 10+ Mega Companies. They are improving their codes and applications via embold. And also many developers and project managers want to use Embold to improve a progress in writing codes</p>
-      </div>
-      <div class="col-6">
-        image
-      </div>
-    </div>
-  </section>
-  <section class="container block block-section-sub block-section-right">
-    <div class="row">
-      <div class="col-6">
-        image
-      </div>
-      <div class="col-6">
-        <!-- <h4>Language Support</h4> -->
-        <h2 class="section-title">We are a diverse, Global team</h2>
-        <p class="description">embold is trusted by 1,000+ developers and 10+ Mega Companies. They are improving their codes and applications via embold. And also many developers and project managers want to use Embold to improve a progress in writing codes</p>
-      </div>
-    </div>
-  </section>
-  <section class="container block block-section-sub block-section-left">
-    <div class="row">
-      <div class="col-6">
-        <!-- <h4>Language Support</h4> -->
-        <h2 class="section-title">We are a software company building products for the future</h2>
-        <p class="description">embold is trusted by 1,000+ developers and 10+ Mega Companies. They are improving their codes and applications via embold. And also many developers and project managers want to use Embold to improve a progress in writing codes</p>
-      </div>
-      <div class="col-6">
-        image
-      </div>
-    </div>
-  </section>
-  <section class="container block block-section-sub team-value">
+
+  <section class="container block block-section-sub team">
     <div class="row">
       <div class="col-12">
         <span class="icon-section ic-star-glow"></span>
-        <h2 class="section-title">Timeline</h2>
+        <h2 class="section-title">Leadership</h2>
         <p class="block-description">embold is trusted by 1,000+ developers and 10+ Mega Companies. They are improving their codes and applications via embold. And also many developers and project managers want to use Embold to improve a progress in writing codes</p>
       </div>
       <div class="body-content">
-        <div class="col-12">
+        <div class="col-2"></div>
+        <div class="col-8">
           <div class="member-big">
-            <div class="member-photo">
-
-            </div>
+            <div class="member-photo photo-member-vishal"></div>
             <div class="member-detail">
-
+              <h3 class="name">Vishal Rai</h3>
+              <span class="role">CEO / Founder</span>
+              <p class="description">
+                “Acellere has been the place for me to learn and grow as an individual and team member. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra justo commodo.”
+              </p>
+              <div class="member-sns">
+                <i class="fab fa-twitter icon-sns"></i>
+                <i class="fab fa-medium icon-sns"></i>
+                <i class="fab fa-linkedin-in icon-sns"></i>
+              </div>
+            </div>
+          </div>
+          <div class="member-big">
+            <div class="member-photo photo-member-vishal"></div>
+            <div class="member-detail">
+              <h3 class="name">Sudarshan Bhide</h3>
+              <span class="role">CTO / Co-Founder</span>
+              <p class="description">
+                “Acellere has been the place for me to learn and grow as an individual and team member. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra justo commodo.”
+              </p>
+              <div class="member-sns">
+                <i class="fab fa-twitter icon-sns"></i>
+                <i class="fab fa-medium icon-sns"></i>
+                <i class="fab fa-linkedin-in icon-sns"></i>
+              </div>
+            </div>
+          </div>
+          <div class="member-big">
+            <div class="member-photo photo-member-vishal"></div>
+            <div class="member-detail">
+              <h3 class="name">Benjamin Scherer</h3>
+              <span class="role">CFO</span>
+              <p class="description">
+                “Acellere has been the place for me to learn and grow as an individual and team member. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra justo commodo.”
+              </p>
+              <div class="member-sns">
+                <i class="fab fa-twitter icon-sns"></i>
+                <i class="fab fa-medium icon-sns"></i>
+                <i class="fab fa-linkedin-in icon-sns"></i>
+              </div>
             </div>
           </div>
         </div>
@@ -204,7 +152,7 @@
     <div class="row">
       <div class="col-12">
         <span class="icon-section ic-star-glow"></span>
-        <h2 class="section-title">Offices</h2>
+        <h2 class="section-title">Investers</h2>
         <p class="block-description">embold is trusted by 1,000+ developers and 10+ Mega Companies. They are improving their codes and applications via embold. And also many developers and project managers want to use Embold to improve a progress in writing codes</p>
       </div>
       <div class="body-content">
@@ -215,6 +163,129 @@
             </div>
             <div class="member-detail">
 
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <section class="container block block-section-sub block-section-left team">
+    <div class="row">
+      <div class="col-12">
+        <span class="icon-section ic-star-glow"></span>
+        <h2 class="section-title">Member</h2>
+        <p class="block-description">embold is trusted by 1,000+ developers and 10+ Mega Companies. They are improving their codes and applications via embold. And also many developers and project managers want to use Embold to improve a progress in writing codes</p>
+      </div>
+      <div class="body-content">
+        <div class="col-3">
+          <div class="member-small">
+            <div class="member-photo photo-member-vishal"></div>
+            <div class="member-detail">
+              <h3 class="name">Benjamin Scherer</h3>
+              <span class="role">CFO</span>
+              <div class="member-sns">
+                <i class="fab fa-twitter icon-sns"></i>
+                <i class="fab fa-medium icon-sns"></i>
+                <i class="fab fa-linkedin-in icon-sns"></i>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-3">
+          <div class="member-small">
+            <div class="member-photo photo-member-vishal"></div>
+            <div class="member-detail">
+              <h3 class="name">Benjamin</h3>
+              <span class="role">CFO</span>
+              <div class="member-sns">
+                <i class="fab fa-twitter icon-sns"></i>
+                <i class="fab fa-medium icon-sns"></i>
+                <i class="fab fa-linkedin-in icon-sns"></i>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-3">
+          <div class="member-small">
+            <div class="member-photo photo-member-vishal"></div>
+            <div class="member-detail">
+              <h3 class="name">Benjamin</h3>
+              <span class="role">CFO</span>
+              <div class="member-sns">
+                <i class="fab fa-twitter icon-sns"></i>
+                <i class="fab fa-medium icon-sns"></i>
+                <i class="fab fa-linkedin-in icon-sns"></i>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-3">
+          <div class="member-small">
+            <div class="member-photo photo-member-vishal"></div>
+            <div class="member-detail">
+              <h3 class="name">Benjamin</h3>
+              <span class="role">CFO</span>
+              <div class="member-sns">
+                <i class="fab fa-twitter icon-sns"></i>
+                <i class="fab fa-medium icon-sns"></i>
+                <i class="fab fa-linkedin-in icon-sns"></i>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-3">
+          <div class="member-small">
+            <div class="member-photo photo-member-vishal"></div>
+            <div class="member-detail">
+              <h3 class="name">Benjamin</h3>
+              <span class="role">CFO</span>
+              <div class="member-sns">
+                <i class="fab fa-twitter icon-sns"></i>
+                <i class="fab fa-medium icon-sns"></i>
+                <i class="fab fa-linkedin-in icon-sns"></i>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-3">
+          <div class="member-small">
+            <div class="member-photo photo-member-vishal"></div>
+            <div class="member-detail">
+              <h3 class="name">Benjamin</h3>
+              <span class="role">CFO</span>
+              <div class="member-sns">
+                <i class="fab fa-twitter icon-sns"></i>
+                <i class="fab fa-medium icon-sns"></i>
+                <i class="fab fa-linkedin-in icon-sns"></i>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-3">
+          <div class="member-small">
+            <div class="member-photo photo-member-vishal"></div>
+            <div class="member-detail">
+              <h3 class="name">Benjamin</h3>
+              <span class="role">CFO</span>
+              <div class="member-sns">
+                <i class="fab fa-twitter icon-sns"></i>
+                <i class="fab fa-medium icon-sns"></i>
+                <i class="fab fa-linkedin-in icon-sns"></i>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-3">
+          <div class="member-small">
+            <div class="member-photo photo-member-vishal"></div>
+            <div class="member-detail">
+              <h3 class="name">Benjamin</h3>
+              <span class="role">CFO</span>
+              <div class="member-sns">
+                <i class="fab fa-twitter icon-sns"></i>
+                <i class="fab fa-medium icon-sns"></i>
+                <i class="fab fa-linkedin-in icon-sns"></i>
+              </div>
             </div>
           </div>
         </div>
