--- a/embold.com/index.html
+++ b/embold.com/index.html
@@ -74,27 +74,87 @@
     </div>
   </div>
 
-  <div class="container-fluid bg-light">
+  <div class="container-fluid bg-light block-index-hero">
+    <div class="header-image bg-index-hero"></div>
     <div class="container block block-hero">
       <div class="row">
-        <div class="col-12">
-          <h4>Introduce</h4>
-          <h2>You have to only 4-steps<br />to embolden your codes</h2>
+        <div class="col-8">
+          <div class="wrap-hero-content">
+            <h1 class="headcopy">We are getting better
+              Introducing our Brand
+            </h1>
+            <p class="description">
+              When your team needs to kick off a project, hire a new employee, deploy some code, review a sales contract, finalize next year's budget, measure an A/B test, plan your next office opening, and more, Slack has you covered.
+            </p>
+            <div class="wrap-sign-up">
+              <input class="input inline-input" type="text" placeholder="E-mail Address" />
+              <button class="btn btn-orange btn-md inline-input">Sign-Up</button>
+            </div>
+          </div>
         </div>
       </div>
     </div>
   </div>
-  <div class="container-fluid bg-light">
+  <section class="container-fluid bg-light block-index-workflow">
     <div class="container block">
       <div class="row">
         <div class="col-12">
-          <h4>Introduce</h4>
+          <h4>Workflow</h4>
           <h2>You have to only 4-steps<br />to embolden your codes</h2>
+        </div>
+        <div class="col-3">
+          <div class="wrap-workflow workflow-1">
+            <i class="icon ic-folder-add"></i>
+            <span class="step-number">1</span>
+            <h3 class="step-title">Create a Project</h3>
+            <p class="description">
+              Plan and structure work in a way that’s best for you. Set priorities and deadlines. Share details and assign tasks. All in one place.
+            </p>
+            <div class="workflow-flowline"></div>
+            <div class="workflow-flowcircle-right"></div>
+          </div>
+        </div>
+        <div class="col-3">
+          <div class="wrap-workflow workflow-2">
+            <i class="icon ic-repository-link"></i>
+            <span class="step-number">2</span>
+            <h3 class="step-title">Link Repository</h3>
+            <p class="description">
+              Plan and structure work in a way that’s best for you. Set priorities and deadlines. Share details and assign tasks. All in one place.
+            </p>
+            <div class="workflow-flowcircle-left"></div>
+            <div class="workflow-flowline"></div>
+            <div class="workflow-flowcircle-right"></div>
+          </div>
+        </div>
+        <div class="col-3">
+          <div class="wrap-workflow workflow-3">
+            <i class="icon ic-scan"></i>
+            <span class="step-number">3</span>
+            <h3 class="step-title">Scan Your Repository</h3>
+            <p class="description">
+              Plan and structure work in a way that’s best for you. Set priorities and deadlines. Share details and assign tasks. All in one place.
+            </p>
+            <div class="workflow-flowcircle-left"></div>
+            <div class="workflow-flowline"></div>
+            <div class="workflow-flowcircle-right"></div>
+          </div>
+        </div>
+        <div class="col-3">
+          <div class="wrap-workflow workflow-4">
+            <i class="icon ic-report"></i>
+            <span class="step-number">4</span>
+            <h3 class="step-title">Get the Report</h3>
+            <p class="description">
+              Plan and structure work in a way that’s best for you. Set priorities and deadlines. Share details and assign tasks. All in one place.
+            </p>
+            <div class="workflow-flowcircle-left"></div>
+          </div>
         </div>
       </div>
     </div>
-  </div>
-  <div class="container block">
+  </section>
+  <section class="container block block-index-partnership">
     <div class="row">
       <div class="col-12">
         <h4>Partnership</h4>
@@ -133,27 +193,62 @@
           <div class="link-arrow"></div>
         </div>
       </div>
-    </div>
-  </div>
-  <div class="container block">
-    <div class="row">
-      <div class="col-12">
-        <h4>User stories</h4>
-        <h2>Listen Success Stories</h2>
-        <p class="block-description">embold is trusted by 1,000+ developers and 10+ Mega Companies. They are improving their codes and applications via embold. And also many developers and project managers want to use Embold to improve a progress in writing codes</p>
+      <div class="col-3">
+        <div class="background-no-repeat ic-logo-deutsche-leasing wrap-logo"></div>
       </div>
-      <div class="col-4">
-        3 blocks
+      <div class="col-3">
+        <div class="background-no-repeat ic-logo-toyota wrap-logo"></div>
       </div>
-      <div class="col-4">
-        3 blocks
+      <div class="col-3">
+        <div class="background-no-repeat ic-logo-valeo wrap-logo"></div>
       </div>
-      <div class="col-4">
-        3 blocks
+      <div class="col-3">
+        <div class="background-no-repeat ic-logo-digit wrap-logo"></div>
+      </div>
+      <div class="col-12 text-center">
+        <button class="btn btn-default btn-md">Find out more Stories</button>
       </div>
     </div>
-  </div>
-  <div class="container block">
+  </section>
+  <section class="block block-index-user-stories">
+    <div class="container">
+      <div class="row">
+        <div class="col-12">
+          <h4>User stories</h4>
+          <h2>Listen Success Stories</h2>
+          <p class="block-description">embold is trusted by 1,000+ developers and 10+ Mega Companies. They are improving their codes and applications via embold. And also many developers and project managers want to use Embold to improve a progress in writing codes</p>
+        </div>
+        <div class="col-4">
+          <div class="wrap-user photo-developer-1">
+            <h3 class="role">Developer</h3>
+            <p class="description">
+              I'm Java Developer in Valeo
+            </p>
+            <div class="link-arrow"></div>
+          </div>
+        </div>
+        <div class="col-4">
+          <div class="wrap-user photo-manager-1">
+            <h3 class="role">Dev-Ops</h3>
+            <p class="description">
+              I'm Java Developer in Valeo
+            </p>
+            <div class="link-arrow"></div>
+          </div>
+        </div>
+        <div class="col-4">
+          <div class="wrap-user photo-dev-ops-1">
+            <h3 class="role">Project Manager</h3>
+            <p class="description">
+              I'm Lead Project Manager in Toyota, Japan
+            </p>
+            <div class="link-arrow"></div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <section class="container block block-index-features">
     <div class="row">
       <div class="col-12">
         <h4>Features</h4>
@@ -161,18 +256,17 @@
         <p class="block-description">embold is trusted by 1,000+ developers and 10+ Mega Companies. They are improving their codes and applications via embold. And also many developers and project managers want to use Embold to improve a progress in writing codes</p>
       </div>
       <div class="body-content">
-        <div class="col-6">
-          3 blocks
-        </div>
-        <div class="col-6">
-          3 blocks
+        <div class="col-12">
+          <div class="background-no-repeat il-index-features">
+
+          </div>
         </div>
       </div>
       <div class="col-12 text-center">
         <button class="btn btn-default btn-md">Find out more Features</button>
       </div>
     </div>
-  </div>
+  </section>
   <div class="container block">
     <div class="row">
       <div class="col-12">
@@ -224,31 +318,31 @@
         </div>
         <div class="col-2">
           <h4 class="footer-header-links">Product</h4>
-          <a href="#" class="footer-menu-link">Overview</a>
-          <a href="#" class="footer-menu-link">Features</a>
-          <a href="#" class="footer-menu-link">Use Cases</a>
-          <a href="#" class="footer-menu-link">Pricing</a>
-          <a href="#" class="footer-menu-link">Partnership</a>
+          <a href="#" class="nav-menu-link">Overview</a>
+          <a href="#" class="nav-menu-link">Features</a>
+          <a href="#" class="nav-menu-link">Use Cases</a>
+          <a href="#" class="nav-menu-link">Pricing</a>
+          <a href="#" class="nav-menu-link">Partnership</a>
         </div>
         <div class="col-2">
           <h4 class="footer-header-links">User Stories</h4>
-          <a href="#" class="footer-menu-link">By User Role</a>
-          <a href="#" class="footer-menu-link">By Team Size</a>
-          <a href="#" class="footer-menu-link">By Industry</a>
-          <a href="#" class="footer-menu-link">Solution Approach</a>
+          <a href="#" class="nav-menu-link">By User Role</a>
+          <a href="#" class="nav-menu-link">By Team Size</a>
+          <a href="#" class="nav-menu-link">By Industry</a>
+          <a href="#" class="nav-menu-link">Solution Approach</a>
         </div>
         <div class="col-2">
           <h4 class="footer-header-links">Resources</h4>
-          <a href="#" class="footer-menu-link">Product</a>
-          <a href="#" class="footer-menu-link">Download</a>
-          <a href="#" class="footer-menu-link">Media</a>
+          <a href="#" class="nav-menu-link">Product</a>
+          <a href="#" class="nav-menu-link">Download</a>
+          <a href="#" class="nav-menu-link">Media</a>
         </div>
         <div class="col-2">
           <h4 class="footer-header-links">Company</h4>
-          <a href="#" class="footer-menu-link">About</a>
-          <a href="#" class="footer-menu-link">Team</a>
-          <a href="#" class="footer-menu-link">Careers</a>
-          <a href="#" class="footer-menu-link">News</a>
+          <a href="#" class="nav-menu-link">About</a>
+          <a href="#" class="nav-menu-link">Team</a>
+          <a href="#" class="nav-menu-link">Careers</a>
+          <a href="#" class="nav-menu-link">News</a>
         </div>
       </div>
     </div>
