--- a/embold.com/product-pricing.html
+++ b/embold.com/product-pricing.html
@@ -84,7 +84,7 @@
         <h1 class="header-sub-title">Pricing</h1>
       </div>
     </div>
-    <div class="header-image bg-product-features"></div>
+    <div class="header-image bg-product-pricing"></div>
   </div>
 
   <div class="container product-pricing block">
@@ -119,7 +119,7 @@
     </div>
   </div>
 
-  <section class="container block block-section-sub company-benefit">
+  <section class="container block block-section-sub pricing-plan">
     <div class="row">
       <div class="col-12">
         <span class="icon-section ic-gift-box"></span>
@@ -132,10 +132,71 @@
       </div>
     </div>
     <div class="row">
-
+      <div class="col-12">
+        <div class="pricing-terms">
+          <a href="#" class="monthly plan-terms active">Monthly Payment</a>
+          <a href="#" class="yearly plan-terms">Yearly Payment</a>
+        </div>
+      </div>
     </div>
     <div class="row">
-
+      <div class="col-12">
+        <div class="pricing-plan-box">
+          <h4 class="plan-name">Startup</h4>
+          <h3 class="price">€45,00</h3>
+          <span class="description">Per Month</span>
+          <ul class="features">
+            <li>10 Users</li>
+            <li>50,000 LOC</li>
+            <li>Unlimited scan</li>
+          </ul>
+          <button class="btn btn-default btn-sm btn-more sofia">Choose plan</button>
+        </div>
+        <div class="pricing-plan-box">
+          <h4 class="plan-name">Startup</h4>
+          <h3 class="price">€45,00</h3>
+          <span class="description">Per Month</span>
+          <ul class="features">
+            <li>10 Users</li>
+            <li>50,000 LOC</li>
+            <li>Unlimited scan</li>
+          </ul>
+          <button class="btn btn-default btn-sm btn-more sofia">Choose plan</button>
+        </div>
+        <div class="pricing-plan-box">
+          <h4 class="plan-name">Startup</h4>
+          <h3 class="price">€45,00</h3>
+          <span class="description">Per Month</span>
+          <ul class="features">
+            <li>10 Users</li>
+            <li>50,000 LOC</li>
+            <li>Unlimited scan</li>
+          </ul>
+          <button class="btn btn-default btn-sm btn-more sofia">Choose plan</button>
+        </div>
+        <div class="pricing-plan-box">
+          <h4 class="plan-name">Startup</h4>
+          <h3 class="price">€45,00</h3>
+          <span class="description">Per Month</span>
+          <ul class="features">
+            <li>10 Users</li>
+            <li>50,000 LOC</li>
+            <li>Unlimited scan</li>
+          </ul>
+          <button class="btn btn-default btn-sm btn-more sofia">Choose plan</button>
+        </div>
+        <div class="pricing-plan-box">
+          <h4 class="plan-name">Startup</h4>
+          <h3 class="price">€45,00</h3>
+          <span class="description">Per Month</span>
+          <ul class="features">
+            <li>10 Users</li>
+            <li>50,000 LOC</li>
+            <li>Unlimited scan</li>
+          </ul>
+          <button class="btn btn-default btn-sm btn-more sofia">Choose plan</button>
+        </div>
+      </div>
     </div>
   </section>
 
