--- a/embold.com/product-use-cases.html
+++ b/embold.com/product-use-cases.html
@@ -84,7 +84,7 @@
         <h1 class="header-sub-title">Use Cases</h1>
       </div>
     </div>
-    <div class="header-image bg-product-features"></div>
+    <div class="header-image bg-product-use-cases"></div>
   </div>
 
   <section class="container block block-section-sub block-section-left">
