--- a/embold.com/product-overview.html
+++ b/embold.com/product-overview.html
@@ -84,14 +84,14 @@
         <h1 class="header-sub-title">Project Overview</h1>
       </div>
     </div>
-    <div class="header-image bg-product-features"></div>
+    <div class="header-image bg-product-overview"></div>
   </div>
 
   <section class="container block block-section-sub block-section-left">
     <div class="row">
       <div class="col-6">
         <!-- <h4>Language Support</h4> -->
-        <h2 class="section-title">From Good to Great</h2>
+        <h2 class="section-title">Ruleless Static Analysis</h2>
         <p class="description">embold is trusted by 1,000+ developers and 10+ Mega Companies. They are improving their codes and applications via embold. And also many developers and project managers want to use Embold to improve a progress in writing codes</p>
       </div>
       <div class="col-6">
@@ -106,7 +106,7 @@
       </div>
       <div class="col-6">
         <!-- <h4>Language Support</h4> -->
-        <h2 class="section-title">Multi-Dimensional Static Analysis</h2>
+        <h2 class="section-title">Engine for your Code</h2>
         <p class="description">embold is trusted by 1,000+ developers and 10+ Mega Companies. They are improving their codes and applications via embold. And also many developers and project managers want to use Embold to improve a progress in writing codes</p>
       </div>
     </div>
@@ -115,23 +115,11 @@
     <div class="row">
       <div class="col-6">
         <!-- <h4>Language Support</h4> -->
-        <h2 class="section-title">Smart Prioritization</h2>
+        <h2 class="section-title">NCP</h2>
         <p class="description">embold is trusted by 1,000+ developers and 10+ Mega Companies. They are improving their codes and applications via embold. And also many developers and project managers want to use Embold to improve a progress in writing codes</p>
       </div>
       <div class="col-6">
         image
-      </div>
-    </div>
-  </section>
-  <section class="container block block-section-sub block-section-right">
-    <div class="row">
-      <div class="col-6">
-        image
-      </div>
-      <div class="col-6">
-        <!-- <h4>Language Support</h4> -->
-        <h2 class="section-title">Anti-Pattern</h2>
-        <p class="description">embold is trusted by 1,000+ developers and 10+ Mega Companies. They are improving their codes and applications via embold. And also many developers and project managers want to use Embold to improve a progress in writing codes</p>
       </div>
     </div>
   </section>
