--- a/embold.com/resources-product.html
+++ b/embold.com/resources-product.html
@@ -24,13 +24,13 @@
       </div>
       <div class="nav-wrap-items">
         <div class="nav-item-main">
-          <span class="active">Product</span> <i class="fas fa-angle-down"></i>
+          Product <i class="fas fa-angle-down"></i>
         </div>
         <div class="nav-item-main">
           User Stories <i class="fas fa-angle-down"></i>
         </div>
         <div class="nav-item-main">
-          Resources <i class="fas fa-angle-down"></i>
+          <span class="active">Resources</span> <i class="fas fa-angle-down"></i>
         </div>
         <div class="nav-item-main">
           Company <i class="fas fa-angle-down"></i>
@@ -80,58 +80,72 @@
 
   <div class="container block block-header-sub">
     <div class="row">
-      <div class="col-6">
-        <h1 class="header-sub-title">Partnership</h1>
+      <div class="col-8">
+        <h1 class="header-sub-title">
+          Resources<br />
+          Product
+        </h1>
       </div>
     </div>
-    <div class="header-image bg-product-partnership"></div>
+    <div class="header-image bg-resources-product"></div>
   </div>
 
+  <section class="container block block-section-sub technical-documentation">
+    <div class="row">
+      <div class="col-12">
+        <span class="icon-section ic-star-glow"></span>
+        <h2 class="section-title">Technical Documentation</h2>
+      </div>
+      <div class="col-3">
+        <h3 class="title">Release Notes</h3>
+        <ul class="document-list">
+          <li>Release 1.6.0</li>
+          <li>Release 1.5.1</li>
+          <li>Release 1.5.0</li>
+          <li>Release 1.4.4</li>
+          <li>Release 1.4.3</li>
+          <li>Release 1.4.2</li>
+          <li>Release 1.4.0</li>
+          <li>Release 1.3.2</li>
+          <li>Release 1.3.1</li>
+          <li>Release 1.3.0</li>
+          <li>Release 1.2.6</li>
+          <li>Release 1.2.4</li>
+        </ul>
+      </div>
+      <div class="col-3">
+        <h3 class="title">Code Issues</h3>
+        <ul class="document-list">
+          <li>C/C++</li>
+          <li>C#</li>
+          <li>Objective-C</li>
+          <li>Java</li>
+          <li>Python</li>
+          <li>JavaScript</li>
+          <li>Typescript</li>
+          <li>Go</li>
+          <li>PHP</li>
+          <li>Kotlin</li>
+          <li>Solidity</li>
+        </ul>
+      </div>
+      <div class="col-3">
+        <h3 class="title">Anti-Patterns</h3>
+      </div>
+      <div class="col-3">
+
+      </div>
+    </div>
+  </section>
   <section class="container block block-section-sub block-section-left">
     <div class="row">
       <div class="col-6">
         <!-- <h4>Language Support</h4> -->
-        <h2 class="section-title">From Good to Great</h2>
+        <h2 class="section-title">Installer</h2>
         <p class="description">embold is trusted by 1,000+ developers and 10+ Mega Companies. They are improving their codes and applications via embold. And also many developers and project managers want to use Embold to improve a progress in writing codes</p>
       </div>
       <div class="col-6">
         image
-      </div>
-    </div>
-  </section>
-  <section class="container block block-section-sub block-section-right">
-    <div class="row">
-      <div class="col-6">
-        image
-      </div>
-      <div class="col-6">
-        <!-- <h4>Language Support</h4> -->
-        <h2 class="section-title">Multi-Dimensional Static Analysis</h2>
-        <p class="description">embold is trusted by 1,000+ developers and 10+ Mega Companies. They are improving their codes and applications via embold. And also many developers and project managers want to use Embold to improve a progress in writing codes</p>
-      </div>
-    </div>
-  </section>
-  <section class="container block block-section-sub block-section-left">
-    <div class="row">
-      <div class="col-6">
-        <!-- <h4>Language Support</h4> -->
-        <h2 class="section-title">Smart Prioritization</h2>
-        <p class="description">embold is trusted by 1,000+ developers and 10+ Mega Companies. They are improving their codes and applications via embold. And also many developers and project managers want to use Embold to improve a progress in writing codes</p>
-      </div>
-      <div class="col-6">
-        image
-      </div>
-    </div>
-  </section>
-  <section class="container block block-section-sub block-section-right">
-    <div class="row">
-      <div class="col-6">
-        image
-      </div>
-      <div class="col-6">
-        <!-- <h4>Language Support</h4> -->
-        <h2 class="section-title">Anti-Pattern</h2>
-        <p class="description">embold is trusted by 1,000+ developers and 10+ Mega Companies. They are improving their codes and applications via embold. And also many developers and project managers want to use Embold to improve a progress in writing codes</p>
       </div>
     </div>
   </section>
