--- a/embold.com/user-stories-solution-approach.html
+++ b/embold.com/user-stories-solution-approach.html
@@ -81,10 +81,10 @@
   <div class="container block block-header-sub">
     <div class="row">
       <div class="col-6">
-        <h1 class="header-sub-title">By User roles</h1>
+        <h1 class="header-sub-title">Solution Approach</h1>
       </div>
     </div>
-    <div class="header-image bg-user-stories-user-roles "></div>
+    <div class="header-image bg-user-stories-solution-approach "></div>
   </div>
 
   <div class="tab-role">
