embold almost finish

--- a/embold.com/index.html
+++ b/embold.com/index.html
@@ -267,7 +267,7 @@
       </div>
     </div>
   </section>
-  <div class="container block">
+  <section class="container block">
     <div class="row">
       <div class="col-12">
         <h4>Team Embold</h4>
@@ -275,24 +275,17 @@
         <p class="block-description">embold is trusted by 1,000+ developers and 10+ Mega Companies. They are improving their codes and applications via embold. And also many developers and project managers want to use Embold to improve a progress in writing codes</p>
       </div>
       <div class="body-content">
-        <div class="col-3">
-          4 blocks
-        </div>
-        <div class="col-3">
-          4 blocks
-        </div>
-        <div class="col-3">
-          4 blocks
-        </div>
-        <div class="col-3">
-          4 blocks
+        <div class="col-12">
+          <div class="background-no-repeat il-index-locations">
+
+          </div>
         </div>
       </div>
       <div class="col-12 text-center">
         <button class="btn btn-default btn-md">Find out Our Team</button>
       </div>
     </div>
-  </div>
+  </section>
   <div class="container-fluid bg-orange">
     <div class="container block">
       <div class="row">
