--- a/embold.com/product-pricing.html
+++ b/embold.com/product-pricing.html
@@ -122,7 +122,7 @@
   <section class="container block block-section-sub pricing-plan">
     <div class="row">
       <div class="col-12">
-        <span class="icon-section ic-gift-box"></span>
+        <span class="icon-section ic-cloud-code"></span>
         <h2 class="section-title">Cloud-Based Packages</h2>
         <p class="block-description">embold is trusted by 1,000+ developers and 10+ Mega Companies.
           They are improving their codes and applications via embold.
