--- a/embold.com/product-features.html
+++ b/embold.com/product-features.html
@@ -113,22 +113,28 @@
   </section>
   <section class="container block block-section-sub block-section-left">
     <div class="row">
-      <div class="col-6">
+      <div class="col-1">
+
+      </div>
+      <div class="col-5">
         <!-- <h4>Language Support</h4> -->
         <h2 class="section-title">Smart Prioritization</h2>
         <p class="description">embold is trusted by 1,000+ developers and 10+ Mega Companies. They are improving their codes and applications via embold. And also many developers and project managers want to use Embold to improve a progress in writing codes</p>
       </div>
-      <div class="col-6">
-        image
+      <div class="col-5">
+        <div class="il-product-features-smart-priori background-no-repeat body-illustration"></div>
       </div>
     </div>
   </section>
   <section class="container block block-section-sub block-section-right">
     <div class="row">
-      <div class="col-6">
-        image
+      <div class="col-1">
+
       </div>
-      <div class="col-6">
+      <div class="col-5">
+        <div class="il-product-features-anti-pattern background-no-repeat body-illustration"></div>
+      </div>
+      <div class="col-5">
         <!-- <h4>Language Support</h4> -->
         <h2 class="section-title">Anti-Pattern</h2>
         <p class="description">embold is trusted by 1,000+ developers and 10+ Mega Companies. They are improving their codes and applications via embold. And also many developers and project managers want to use Embold to improve a progress in writing codes</p>
