--- a/embold.com/index.html
+++ b/embold.com/index.html
@@ -282,7 +282,7 @@
         </div>
       </div>
       <div class="col-12 text-center">
-        <button class="btn btn-default btn-md">Find out Our Team</button>
+        <button class="btn btn-default btn-md">Read About Embold</button>
       </div>
     </div>
   </section>
